# SimpleFS

./: .gitignore  .simplefs_test.c.kate-swp  CMakeLists.txt  Makefile  README.md  bitmap.c  bitmap.h  bitmap_structures.h  common.h  disk_driver.c  disk_driver.h  disk_driver_structures.h  list.c  list.h  shell.c  simplefs.c  simplefs.h  simplefs_apis.c  simplefs_apis.h  simplefs_apis_test.c  simplefs_aux.c  simplefs_aux.h  simplefs_shell_apis.c  simplefs_shell_apis.h  simplefs_structures.h  simplefs_test.c  users.c  users.h  users_test.c
report/: bitmap.docx  common.docx  disk_driver.docx  final-report.docx  simplefs  ~$nal-report.docx
shell/: provas.c  s.c  shell.c
test/: war_peace_trunc.txt
